syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "models/gateway.proto";

option go_package = "grpc/lead-grpc;proto";

service LeadProductService {
    rpc AddProductsToLead(AddProductsToLeadRequest) returns (AddProductsToLeadResponse) {
        option (google.api.http) = {
            post: "/v1/leads/{id}/products"
            body: "*"
        };
    }

    rpc DeleteLeadProducts(DeleteLeadProductsRequest) returns (DeleteLeadProductsResponse) {
        option (google.api.http) = {
            delete: "/v1/leads/{id}/products"
        };
    }

    rpc DeleteLeadProduct(DeleteLeadProductRequest) returns (DeleteLeadProductResponse) {
        option (google.api.http) = {
            delete: "/v1/leads/{id}/products/{product_id}"
            body: ""
        };
    }

    rpc GetLeadProducts(GetLeadProductsRequest) returns (GetLeadProductsResponse) {
        option (google.api.http) = {
            get: "/v1/leads/{id}/lead-product/{product_id}"
        };
    }

    rpc GetLeadsProducts(GetLeadsProductsRequest) returns (GetLeadsProductsResponse) {
        option (google.api.http) = {
            get: "/v1/leads/lead-product"
        };
    }

    rpc PutProductsLead(PutProductsLeadRequest) returns (PutProductsLeadResponse) {
        option (google.api.http) = {
            put: "/v1/leads/{id}/products"
            body: "*"
        };
    }
}

message AddProductsToLeadRequest {
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
    repeated uint32 product_ids = 2;
}

message AddProductsToLeadResponse {
    string message = 1;
}

message DeleteLeadProductRequest {
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
    uint32 product_id = 2;
}

message DeleteLeadProductResponse {
    string message = 1;
}

message DeleteLeadProductsRequest {
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
}

message DeleteLeadProductsResponse {
    string message = 1;
}

message GetLeadProductsRequest {
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
    uint32 product_id = 2[(validate.rules).uint32.gt = 0];
}

message GetLeadProductsResponse {
    repeated models.ItemResponse products = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
}

message GetLeadsProductsRequest {
    google.protobuf.Empty empty = 1;
}

message GetLeadsProductsResponse {
    repeated models.ItemResponse products = 1;
}

message PutProductsLeadRequest {
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
    models.ItemRequest product = 2;
}

message PutProductsLeadResponse {
    string message = 1;
}
